# cc-gutils

./: .localalias  CMakeLists.txt  shared.cmake
docs/: Doxyfile
html/: index.html
include/: gutils.h
latex/: refman.tex
lib/: CMakeLists.txt  gutils.cc  gutils.h
src/: CMakeLists.txt  core.cc  debug.cc  gutils.cc
test/: CMakeLists.txt  test.h  test_gutils.cc
